Fix bad dark mode css

--- a/static/global.css
+++ b/static/global.css
@@ -2,6 +2,7 @@ html,
 body,
 #sapper {
   min-height: 100%;
+  height: 100%;
 }
 
 * {
